--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,45 +1,10 @@
-html, body {
-    padding: 0px;
+.el-select{
+    width: 100%;
+}
+.el-input__suffix{
     margin: 0px;
-    height: 100%;
 }
-#app{
-    height: 100%;
-}
-.login-title,.login-form{
-    margin: auto;
-
-}
-.login-title{
-    margin-top: 100px;
-    text-align: center;
-    font-size: 50px;
-    font-family: fangsong;
-    color: #409EFF;
-    font-weight: 600;
-}
-.login-form{
-    width: 350px;
-    border: 1px solid #8c939d;
-    margin-top: 90px;
-    padding-top: 30px;
-    border-radius: 5px;
-}
-.el-form{
-    width: 80%;
-    margin: auto;
-}
-.el-form-item{
-    margin-right: 10px;
-}
-.code-input{
-    width: 40%;
-}
-.code-img{
-    width: 57%;
-    float: right;
-}
-.button-sub{
-    margin-left: 100px;
-    margin-bottom: 25px;
+.el-input__inner{
+    padding: 0px;
+    border-radius:0px ;
 }
