--- a/src/main/resources/static/css/downloadProcess.css
+++ b/src/main/resources/static/css/downloadProcess.css
@@ -1,7 +1,7 @@
 .download-button {
     float: right;
-    margin-right: 76%;
-    margin-top: 1.8%;
+    margin-right: 74%;
+    margin-top: 30px;
     padding: 10px 20px;
     background-color: #4CAF50;
     color: white;
