--- a/src/main/resources/static/css/new_index.css
+++ b/src/main/resources/static/css/new_index.css
@@ -2,54 +2,93 @@ html, body {
     padding: 0px;
     margin: 0px;
     height: 100%;
-    background:#F3F5F7;
+
 }
 #app{
     height: 100%;
 }
 .Header{
      width: 100%;
-     background-color:#000080;
-     height:90px;
+     background-color:#FAFAFA;
+     height:70px;
      color:white;
      display:flex;
+     overflow:hidden;
 }
 a{
     text-decoration: none;
     outline: none;
-    color: white;
+    color: black;
+}
+.logo{
+    width: 360px;
+    height: 70px;
+    color: #333333;
+    font-family: '微軟正黑體';
+    font-size: 30px;
+    margin-left: 50px;
+    margin-top: 13px;
 }
 .H_middle{
-    width:1500px;
-    height:45px;
-    line-height:45px;
-    margin:0 auto;
-    margin-top:25px;
+    width:1000px;
+    height:70px;
+    line-height:70px;
+    /*margin:0 auto;*/
     display:flex;
+    margin-left: 100px;
 }
 .H_left{
     display:flex;
     margin:0 auto;
 }
+
 .Menu_item{
-    width:200px;
+    width:150px;
     text-align:center;
-    font-size:25px;
+    font-size:18px;
     cursor:pointer;
+    height:70px;
+    line-height: 70px;
+    position: relative;
+
+    color: #000; /* Set the default text color */
+    transition: color 0.3s ease; /* Add a smooth transition effect for color */
+    overflow: hidden; /* Hide the overflow to clip the background */
+
 }
-.Menu_item:hover{
-    border-bottom:2px solid white;
+.Menu_item::before{
+    content: "";
+    position: absolute;
+    width: 0; /* Initially, set the background width to 0 */
+    height: 100%;
+    bottom: 0;
+    left: 0;
+    background-color: #00cc00; /* Set the color of the sliding background */
+    color: #FAFAFA;
+    z-index:-2;
+    transition: width 0.6s ease; /* Add a smooth transition effect for the sliding line */
+}
+.Menu_item:hover {
+    color: #fff;
+    z-index:1;
+}
+.Menu_item:hover::before {
+    width: 100%; /* Expand the background width on hover */
 }
 .H_right{
-    width:100px;
-    height:45px;
-    line-height:45px;
-    margin-left:auto;
+    width:180px;
+    height:70px;
+    line-height:70px;
+    margin-left:100px;
     text-align:center;
-        font-size:20px;
-        cursor:pointer;
+    font-size:15px;
+    cursor:pointer;
+    color: black;
+    padding: 1px;
 }
-
+.H_right:hover{
+    color: #4CAF50;
+}
 .Top{
 position: relative;
 }
@@ -67,7 +106,7 @@ display: block;
     color: white;
     padding: 10px;
     user-select: none;
-    font-family: '微軟正黑體';
+    font-family: "阿里妈妈刀隶体 Regular", sans-serif;
     font-weight: bold;
     text-align: center;
     font-size: 60px;
@@ -77,20 +116,7 @@ display: block;
     width:1500px;
     padding:1px;
 }
-.S_title{
-    width:200px;
-    text-align:center;
-    margin:20px auto;
-    font-family:"微软雅黑";
-    display:flex;
-    height:45px;
-}
-.line{
-    width:15px;
-    height:40px;
-    background:#01479D;
-    margin-right:15px;
-}
+
 .Title_word{
     font-size:30px;
     letter-spacing:5px;
@@ -135,24 +161,56 @@ display: block;
 .Third{
     width:1500px;
     margin: 0px auto;
+    padding:1px;
 }
 .T_cont{
     margin-top:20px;
-    width:100%;
-    height:200px;
-    border:1px solid #F3F5F8;
-    border-radius:20px;
-    background:white;
+    display:flex;
+    height:430px;
     font-size:18px;
     line-height:30px;
     letter-spacing:2px;
     font-family:'微软雅黑Light';
     padding:10px 5px;
 }
+.S_title{
+    width:200px;
+    text-align:center;
+    margin:40px 300px;
+    font-family:"微软雅黑";
+    height:60px;
+    padding:1px;
+    display:flex;
+    line-height:60px;
+}
+.S_title img{
+    width:60px;
+    height:60px;
+    /*vertical-align: middle;*/
+}
+.S_title p{
+    display:inline-block;
+    font-size:25px;
+    margin-top:15px;
+}
+
+.T_img{
+    width:700px;
+    text-align:center;
+    height:600px;
+    margin-top:50px;
+}
+.T_img img{
+    width:580px;
+    height:390px;
+}
+.T_intro{
+    width:780px;
+}
 .Big{
     width:100%;
     height:1080px;
-    background:url('../img/program.jpg') no-repeat;
+    background:url('../img/EmeraldWater.jpg') no-repeat;
     background-size:100% 100%;
 }
 .Four{
