--- a/src/main/resources/templates/process.html
+++ b/src/main/resources/templates/process.html
@@ -18,6 +18,10 @@
 <body>
 <div id="app">
   <div class="Header">
+    <div class="logo">
+      <img src="../static/img/icon6.jpg" style="width: 48px;height: 48px;vertical-align: middle">
+      <span style="line-height: 30px; margin-left: 1px;">河南大学智慧体育竞赛</span>
+    </div>
     <div class="H_middle">
       <div class="H_left">
         <a href="new_index.html" class="Menu_item">网站首页</a>
@@ -26,7 +30,10 @@
         <a href="contact.html" class="Menu_item">联系我们</a>
         <a href="download.html" class="Menu_item">资料下载</a>
       </div>
-      <div class="H_right">登录/注册</div>
+      <div class="H_right">
+        <img src="../static/img/user_icon1.png" style="width: 35px;height: 35px;vertical-align: middle;margin-top:-8px">
+        <span >登录/注册</span>
+      </div>
     </div>
   </div>
 
@@ -62,7 +69,9 @@
     <p style="font-size: 28px; color: #333;">五、其他事项：</p>
     <p style="font-size: 20px; color: #909399;line-height: 1.5;">竞赛组委会办公室设在河南大学软件学院，有关竞赛的其它事宜，竞赛组委会将另行通知。</p>
   </div>
+
   <BR><BR><BR><BR><BR><BR><BR>
+
   <div class="foot">
     <div class="f_con">
       <div class="link">
