--- a/src/main/resources/templates/new_index.html
+++ b/src/main/resources/templates/new_index.html
@@ -36,7 +36,7 @@
 
     <!--头部-->
     <div class="Top">
-        <img src="../static/img/header.jpg" >
+        <img src="../static/img/watercolor.jpg" >
         <div class="Top_word">河南大学智慧体育竞赛</div>
     </div>
 
@@ -68,16 +68,16 @@
     <div class="Second">
         <div class="S_content">
             <!--轮播图-->
-            <el-carousel :interval="2500" style="width: 600px;margin-top: 90px;margin-left: 55px;" :arrow="arrow">
+            <el-carousel :interval="2500" style="width: 600px;margin-top: 180px;margin-left: 55px;" :arrow="arrow">
                 <el-carousel-item v-for="item in 4" :key="item" style="cursor: pointer;height: 300px">
                     <img :src="'../static/img/testpic' + item + '.jpg'" style="width: 100%; height: 100%; ">
                 </el-carousel-item>
             </el-carousel>
             <!--时间线-->
             <div class="timeline">
-                <div class="S_title">
+                <div class="S_title2">
                     <div><img src="../static/img/titlecoin.jpg"></div>
-                    <div style="margin-bottom:20px;font-size:25px;">赛事安排</div>
+                    <div style="margin-bottom:10px;font-size:25px;">赛事安排</div>
                 </div>
                 <div class="time_Data">
                     <div class="Data_item">2023-11-01</div>
@@ -108,9 +108,9 @@
 
     </div>
 
-    <div class="S_title" style="margin-top:75px;">
-        <div class="line"></div>
-        <div class="Title_word">比赛项目</div>
+    <div class="S_title3">
+        <div><img src="../static/img/titlecoin.jpg"></div>
+        <div style="margin-bottom:10px;font-size:25px;">比赛项目</div>
     </div>
     <div class="Big">
         <div class="Four">
