大版本提交

--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -24,9 +24,9 @@
     </div>
     <div class="H_middle">
       <div class="H_left">
-        <a href="new_index.html" class="Menu_item">网站首页</a>
+        <a href="index.html" class="Menu_item">网站首页</a>
         <a href="process.html" class="Menu_item">比赛流程</a>
-        <a href="比赛报名.html" class="Menu_item">比赛报名</a>
+        <a href="/apply" class="Menu_item">比赛报名</a>
         <a href="contact.html" class="Menu_item">联系我们</a>
         <a href="download.html" class="Menu_item">资料下载</a>
       </div>
