--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -5,12 +5,12 @@
   <title>比赛流程 </title>
   <meta charset="UTF-8">
   <title>Title</title>
-  <link rel="stylesheet" href="/static/css/element-ui.css"/>
+  <link rel="stylesheet" href="../static/css/element-ui.css"/>
   <link rel="stylesheet" href="../static/css/new_index.css"/>
-  <link rel="stylesheet" href="/static/css/downloadProcess.css"/>
-  <script src="/static/js/jquery-3.7.1.min.js"></script>
-  <script src="/static/js/vue.js"></script>
-  <script src="/static/js/element-ui.js"></script>
+  <link rel="stylesheet" href="../static/css/contact.css"/>
+  <script src="../static/js/jquery-3.7.1.min.js"></script>
+  <script src="../static/js/vue.js"></script>
+  <script src="../static/js/element-ui.js"></script>
 
 </head>
 
@@ -20,7 +20,7 @@
   <div class="Header">
     <div class="logo">
       <img src="../static/img/icon6.jpg" style="width: 48px;height: 48px;vertical-align: middle">
-      <span style="line-height: 30px; margin-left: 1px;">河南大学智慧体育竞赛</span>
+      <span style="line-height: 30px; margin-left: 1px;">河南大学智慧篮球竞赛</span>
     </div>
     <div class="H_middle">
       <div class="H_left">
@@ -39,17 +39,37 @@
 
   <!--头部-->
   <div class="Top">
-    <img src="../static/img/header.jpg" >
-    <div class="Top_word">河南大学智慧体育竞赛 </div>
+    <img src="../static/img/basketbanner.jpg" >
+    <div class="Top_word">河南大学智慧篮球竞赛</div>
+    <div class="Top_word2">时间：2023年11月13日—12月29日</div>
+    <div class="Top_word3">地点：河南大学(金明校区)</div>
   </div>
 
   <div style=" margin-top: 24px;">
-    <p style="font-size: 28px; text-align: center;color: #333;">联系方式</p>
-    <p style="font-size: 16px; margin-left: 20%;color: #333;">联系电话：1111</p>
-    <p style="font-size: 16px; margin-left: 20%;color: #333;">联系邮箱：@henu.com</p>
-    <p style="font-size: 16px; margin-left: 20%;color: #333;">联系地址：河南大学软件学院1001</p><BR><BR><BR>
+    <p style="font-size: 28px;margin-left: 10%;color: #333;">联系方式</p>
+    <p style="font-size: 16px; margin-left: 10%;color: #909399;">如果有任何疑问请联系我们。</p>
 
+<!--    <p style="font-size: 16px; margin-left: 20%;color: #333;">联系电话：1111</p>-->
+<!--    <p style="font-size: 16px; margin-left: 20%;color: #333;">联系邮箱：@henu.com</p>-->
+<!--    <p style="font-size: 16px; margin-left: 20%;color: #333;">联系地址：河南大学软件学院1001</p><BR><BR><BR>-->
   </div>
+  <div class="contact">
+    <div class="contact_icon">
+      <img src="../static/img/tel.png">
+      <img src="../static/img/local.png">
+      <img src="../static/img/email.png">
+    </div>
+    <div class="contact_font">
+      <span>电话：</span>
+      <span>地址：</span>
+      <span>邮箱：</span>
+    </div>
+    <div class="contact_info">
+      <span>1620554712</span>
+      <span>河南大学金明校区软件学院103</span>
+      <span>1620554712@qq.com</span>
+    </div>
+  </div><BR><BR><BR><BR><BR><BR><BR>
 
   <div class="foot">
     <div class="f_con">
@@ -64,6 +84,10 @@
         <p>报名：16666666666</p>
         <p>邮箱：111111111@qq.com</p>
         <p>地址：河南省开封市龙亭区东京大道河南大学</p>
+      </div>
+      <div class="pic_font">
+        <img src="../static/img/dimentioncode.png" style="width: 200px;height: 220px;margin-left: 120px;margin-top: 10px">
+        <p>请扫码加群</p>
       </div>
     </div>
 
