--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,7 +16,7 @@
     <div class="Header">
         <div class="logo">
             <img src="../static/img/icon6.jpg" style="width: 48px;height: 48px;vertical-align: middle">
-            <span style="line-height: 30px; margin-left: 1px;">河南大学智慧体育竞赛</span>
+            <span style="line-height: 30px; margin-left: 1px;">河南大学智慧篮球竞赛</span>
         </div>
         <div class="H_middle">
             <div class="H_left">
@@ -36,15 +36,17 @@
 
     <!--头部-->
     <div class="Top">
-        <img src="../static/img/header.jpg" >
-        <div class="Top_word">河南大学智慧体育竞赛</div>
+        <img src="../static/img/basketbanner.jpg" >
+        <div class="Top_word">河南大学智慧篮球竞赛</div>
+        <div class="Top_word2">时间：2023年11月13日—12月29日</div>
+        <div class="Top_word3">地点：河南大学(金明校区)</div>
     </div>
 
     <!--  比赛介绍  -->
     <div class="Third">
         <div class="T_cont">
             <div class="T_img">
-                <img src="../static/img/introduce.jpg">
+                <img src="../static/img/basketbanner4.jpg">
             </div>
             <div class="T_intro">
                 <div class="S_title">
@@ -52,14 +54,15 @@
                     <div style="margin-bottom:10px;font-size:25px;">比赛介绍</div>
                 </div>
                 <div>
-                    智慧体育是在体育信息化、数字化、智能化的基础上，以物联网、大数据、人工智能等新一代信息技术手段为依托
-                    ，突出强调以人为本的核心理念，将先进科技融入体育产品研发、生产、运输的各环节，使体育的管理、服务等各
-                    阶段充满“智慧”，体现人文关怀、提高效率的同时，实现体育产业经济效益最大化，推动体育可持续发展，最终
-                    “智慧服务于人”，提升体育参与者运动体验感，保障其运动质量。为引导激励我校学生积极响应创新创造的时
-                    代号召，激发大学生从事科学研究与探索的兴趣和潜能以及对体育的热爱，倡导理论联系实际、求真务实的学
-                    风和团队协作的人文精神，提升我校学生的创新能力、实践能力、协作精神、科学和身体素质，培养更多人工智能
-                    领域和工程项目所需人才，河南大学智慧网络研究院和河南众知
-                    物科技有限公司定于XXXX年XX月XX日至XX日在河南大学 (金明校区)，举办河南大学大学生智慧体育竞赛。
+                    “智慧篮球”是一种结合了科技和篮球运动的概念，利用先进的技术手段来提升篮球运动的体验和效果。
+                    在体育信息化、数字化、智能化的基础上，以物联网、大数据、人工智能等新一代信息技术手段为依托 ，
+                    突出强调以人为本的核心理念，将先进科技融入体育产品研发、生产、运输的各环节，使体育的管理、服务等各阶段
+                    充满“智慧”，体现人文关怀、提高效率的同时，实现体育产业经济效益最大化，推动体育可持续发展，最终“智慧服务于人”，
+                    提升体育参与者运动体验感，保障其运动质量。为引导激励我校学生积极响应创新创造的时代号召，
+                    激发大学生从事科学研究与探索的兴趣和潜能以及对体育的热爱，倡导理论联系实际、求真务实的学风和团队协作的人文精神，
+                    提升我校学生的创新能力、实践能力、协作精神、科学和身体素质，培养更多人工智能领域和工程项目所需人才，
+                    河南大学智慧网络研究院和河南众知物科技有限公司定于XXXX年XX月XX日至XX日在河南大学(金明校区)，
+                    举办河南大学大学生智慧体育竞赛。
                 </div>
             </div>
         </div>
@@ -68,49 +71,60 @@
     <div class="Second">
         <div class="S_content">
             <!--轮播图-->
-            <el-carousel :interval="2500" style="width: 600px;margin-top: 90px;margin-left: 55px;" :arrow="arrow">
-                <el-carousel-item v-for="item in 4" :key="item" style="cursor: pointer;height: 300px">
-                    <img :src="'../static/img/testpic' + item + '.jpg'" style="width: 100%; height: 100%; ">
+            <el-carousel :interval="2500" style="width: 600px;margin-top: 100px;margin-left: 55px;" :arrow="arrow">
+                <el-carousel-item v-for="item in 4" :key="item" style="cursor: pointer;height: 400px">
+                    <img :src="'../static/img/basketballslider' + item + '.jpg'" style="width: 100%; height: 100%; ">
                 </el-carousel-item>
             </el-carousel>
             <!--时间线-->
             <div class="timeline">
-                <div class="S_title">
+                <div class="S_title2">
                     <div><img src="../static/img/titlecoin.jpg"></div>
                     <div style="margin-bottom:20px;font-size:25px;">赛事安排</div>
                 </div>
                 <div class="time_Data">
-                    <div class="Data_item">2023-11-01</div>
+                    <div class="Data_item">2023-11-16</div>
                     <div class="Data_item">2023-11-01</div>
                     <div class="Data_item">2023-11-01</div>
                     <div class="Data_item">2023-11-01</div>
                 </div>
                 <div class="time_con">
-                    <div class="con_item">
-                        <span>大赛报名</span>
-                        <p>智慧体育是在体育信息化、数字化、智能化的基础上，以物联网、大数据、人工智能等新一代信息技术手段为依托，突出强调以人为本的核心理念，将先进科技融入体育产品研发、生产、运输的各环节，使体育的管理、服务等各阶段充满“智慧”，体现人文关怀</p>
+                    <div >
+                        <el-steps :space="300" :active="computedActive" finish-status="success" align-center>
+                            <el-step title="比赛报名" description="这是一段很长很长很长的描述性文字" style="width: 600px;cursor: pointer">
+                                <template slot="icon" >
+                                    <img  style="width: 30px;height: 30px" src="../static/img/sign.png" >
+                                </template>
+                            </el-step>
+                            <el-step title="比赛进行" description="这是一段很长很长很长的描述性文字" style="cursor: pointer">
+                                <template slot="icon" >
+                                    <img  style="width: 20px;height: 20px" src="../static/img/ing.png" >
+                                </template>
+                            </el-step>
+                            <el-step title="评委评选" description="这是一段很长很长很长的描述性文字" style="cursor: pointer">
+                                <template slot="icon" >
+                                    <img  style="width: 27px;height: 27px" src="../static/img/evaluate.png" >
+                                </template>
+                            </el-step>
+                            <el-step title="获奖排名" description="这是一段很长很长很长的描述性文字" style="cursor: pointer">
+                                <template slot="icon" >
+                                    <img  style="width: 30px;height: 30px" src="../static/img/champion.png" >
+                                </template>
+                            </el-step>
+                        </el-steps>
                     </div>
-                    <div class="con_item">
-                        <span>大赛报名</span>
-                        <p>智慧体育是在体育信息化、数字化、智能化的基础上，以物联网、大数据、人工智能等新一代信息技术手段为依托，突出强调以人为本的核心理念，将先进科技融入体育产品研发、生产、运输的各环节，使体育的管理、服务等各阶段充满“智慧”，体现人文关怀</p>
-                    </div>
-                    <div class="con_item">
-                        <span>大赛报名</span>
-                        <p>智慧体育是在体育信息化、数字化、智能化的基础上，以物联网、大数据、人工智能等新一代信息技术手段为依托，突出强调以人为本的核心理念，将先进科技融入体育产品研发、生产、运输的各环节，使体育的管理、服务等各阶段充满“智慧”，体现人文关怀</p>
-                    </div>
-                    <div class="con_item">
-                        <span>大赛报名</span>
-                        <p>智慧体育是在体育信息化、数字化、智能化的基础上，以物联网、大数据、人工智能等新一代信息技术手段为依托，突出强调以人为本的核心理念，将先进科技融入体育产品研发、生产、运输的各环节，使体育的管理、服务等各阶段充满“智慧”，体现人文关怀</p>
-                    </div>
+
                 </div>
+
             </div>
+
         </div>
 
     </div>
 
-    <div class="S_title" style="margin-top:75px;">
-        <div class="line"></div>
-        <div class="Title_word">比赛项目</div>
+    <div class="S_title3" style="margin-top:35px;">
+        <div><img src="../static/img/titlecoin.jpg"></div>
+        <p>比赛项目</p>
     </div>
     <div class="Big">
         <div class="Four">
@@ -118,19 +132,19 @@
             <div class="pr_pic">
                 <div class="game_item">
                     <a href="process.html" style="color: black;">
-                        <img src="../static/img/slider2.jpg">
+                        <img src="../static/img/tinyweixin.png">
                         <div>小程序开发</div>
                     </a>
                 </div>
                 <div class="game_item" >
                     <a href="process.html" style="color: black;">
-                        <img src="../static/img/slider2.jpg">
+                        <img src="../static/img/web1.jpg">
                         <div>WEB开发</div>
                     </a>
                 </div>
                 <div class="game_item">
                     <a href="process.html" style="color: black;">
-                        <img src="../static/img/slider2.jpg">
+                        <img src="../static/img/Android1.png">
                         <div>安卓/IOS开发</div>
                     </a>
                 </div>
@@ -138,19 +152,19 @@
             <div class="pr_pic">
                 <div class="game_item">
                     <a href="process.html" style="color: black;">
-                        <img src="../static/img/slider2.jpg">
+                        <img src="../static/img/facedetect1.png">
                         <div>人脸识别替换</div>
                     </a>
                 </div>
                 <div class="game_item">
                     <a href="process.html" style="color: black;">
-                        <img src="../static/img/slider2.jpg">
+                        <img src="../static/img/posedetect1.jpg">
                         <div>实时姿态估计</div>
                     </a>
                 </div>
                 <div class="game_item">
                     <a href="process.html" style="color: black;">
-                        <img src="../static/img/slider2.jpg">
+                        <img src="../static/img/3Dpose1.jpg">
                         <div>三维人体重建</div>
                     </a>
                 </div>
@@ -174,6 +188,10 @@
                 <p>报名：16666666666</p>
                 <p>邮箱：111111111@qq.com</p>
                 <p>地址：河南省开封市龙亭区东京大道河南大学</p>
+            </div>
+            <div class="pic_font">
+                <img src="../static/img/dimentioncode.png" style="width: 200px;height: 220px;margin-left: 120px;margin-top: 10px">
+                <p>请扫码加群</p>
             </div>
         </div>
 
@@ -211,11 +229,36 @@
             return {
                 activeIndex: '1',
                 arrow: 'always',
+                active: 0,
             };
+        },
+        computed: {
+            computedActive() {
+                const currentLocalTime = new Date();
+                const step1StartTime = new Date('2023-11-16T00:00:00'); // Replace with your start time
+                const step2StartTime = new Date('2023-11-02T00:00:00'); // Replace with your start time
+                const step3StartTime = new Date('2023-11-02T00:00:00'); // Replace with your start time
+                const step4StartTime = new Date('2023-11-02T00:00:00'); // Replace with your start time
+                // Add more steps as needed
+                const stripTime = (date) => new Date(date.getFullYear(), date.getMonth(), date.getDate());
+
+                if (stripTime(currentLocalTime) <= stripTime(step1StartTime)) {
+                    return 1; // Step 1
+                } else if (stripTime(currentLocalTime) <= stripTime(step2StartTime)) {
+                    return 1; // Step 2
+                } else if (stripTime(currentLocalTime) <= stripTime(step3StartTime)){
+                    return 2; // Step 3
+                }else if (stripTime(currentLocalTime) <= stripTime(step4StartTime)){
+                    return 3;
+                }
+            },
         },
         methods: {
             handleSelect(key, keyPath) {
                 console.log(key, keyPath);
+            },
+            next() {
+                if (this.active++ > 2) this.active = 0;
             }
         }
     }
