--- a/src/main/resources/templates/process.html
+++ b/src/main/resources/templates/process.html
@@ -4,13 +4,12 @@
   <meta charset="UTF-8">
   <title>比赛流程 </title>
   <meta charset="UTF-8">
-  <title>Title</title>
-  <link rel="stylesheet" href="/static/css/element-ui.css"/>
+  <link rel="stylesheet" href="../static/css/element-ui.css"/>
   <link rel="stylesheet" href="../static/css/new_index.css"/>
-  <link rel="stylesheet" href="/static/css/downloadProcess.css"/>
-  <script src="/static/js/jquery-3.7.1.min.js"></script>
-  <script src="/static/js/vue.js"></script>
-  <script src="/static/js/element-ui.js"></script>
+  <link rel="stylesheet" href="../static/css/downloadProcess.css"/>
+  <script src="../static/js/jquery-3.7.1.min.js"></script>
+  <script src="../static/js/vue.js"></script>
+  <script src="../static/js/element-ui.js"></script>
 
 </head>
 
@@ -20,7 +19,7 @@
   <div class="Header">
     <div class="logo">
       <img src="../static/img/icon6.jpg" style="width: 48px;height: 48px;vertical-align: middle">
-      <span style="line-height: 30px; margin-left: 1px;">河南大学智慧体育竞赛</span>
+      <span style="line-height: 30px; margin-left: 1px;">河南大学智慧篮球竞赛</span>
     </div>
     <div class="H_middle">
       <div class="H_left">
@@ -39,8 +38,10 @@
 
   <!--头部-->
   <div class="Top">
-    <img src="../static/img/header.jpg" >
-    <div class="Top_word">河南大学智慧体育竞赛 </div>
+    <img src="../static/img/basketbanner.jpg" >
+    <div class="Top_word">河南大学智慧篮球竞赛</div>
+    <div class="Top_word2">时间：2023年11月13日—12月29日</div>
+    <div class="Top_word3">地点：河南大学(金明校区)</div>
   </div>
 
   <div style=" margin-top: 24px;margin-left: 6%;margin-right: 6%">
@@ -65,6 +66,7 @@
     <p style="font-size: 28px; color: #333;">四、奖项设置：</p>
     <img :src="'../static/img/prize.jpg' " style="width: 600px; ">
   </div>
+
   <div style=" margin-top: 24px;margin-left: 6%;margin-right: 6%">
     <p style="font-size: 28px; color: #333;">五、其他事项：</p>
     <p style="font-size: 20px; color: #909399;line-height: 1.5;">竞赛组委会办公室设在河南大学软件学院，有关竞赛的其它事宜，竞赛组委会将另行通知。</p>
@@ -85,6 +87,10 @@
         <p>报名：16666666666</p>
         <p>邮箱：111111111@qq.com</p>
         <p>地址：河南省开封市龙亭区东京大道河南大学</p>
+      </div>
+      <div class="pic_font">
+        <img src="../static/img/dimentioncode.png" style="width: 200px;height: 220px;margin-left: 120px;margin-top: 10px">
+        <p>请扫码加群</p>
       </div>
     </div>
 
