调整导航栏/按钮颜色；为：登录/注册，比赛报名添加跳转链接（如果已登录isLoggedIn:true跳转到index.html;如果未登录isLoggedIn:false跳转到login.html）。

--- a/src/main/resources/static/css/new_index.css
+++ b/src/main/resources/static/css/new_index.css
@@ -306,7 +306,7 @@ a{
     height: 100%;
     bottom: 0;
     left: 0;
-    background-color: #00cc00; /* Set the color of the sliding background */
+    background-color: #4CD875; /* Set the color of the sliding background */
     color: #FAFAFA;
     z-index:-2;
     transition: width 0.6s ease; /* Add a smooth transition effect for the sliding line */
@@ -329,9 +329,10 @@ a{
     color: black;
     padding: 1px;
 }
-.H_right:hover{
+.H_right a:hover{
     color: #4CAF50;
 }
+
 .Top{
 position: relative;
 }
@@ -625,7 +626,7 @@ display: block;
 .registration_button {
     display: inline-block;
     padding: 15px 40px;
-    background-color:limegreen;
+    background-color:#4CD875;
     color: white;
     text-decoration: none;
     margin-top: 3%;
