--- a/src/main/resources/templates/download.html
+++ b/src/main/resources/templates/download.html
@@ -5,6 +5,7 @@
   <title>资料下载</title>
   <link rel="stylesheet" href="../static/css/element-ui.css"/>
   <link rel="stylesheet" href="../static/css/download.css"/>
+  <link rel="stylesheet" href="../static/css/new_index.css"/>
   <script src="../static/js/jquery-3.7.1.min.js"></script>
   <script src="../static/js/vue.js"></script>
   <script src="../static/js/element-ui.js"></script>
@@ -12,15 +13,61 @@
 
 <body>
 <div id="app">
-  <button class="download-button" @click="downloadFile">下载文件</button>
+  <div class="Header">
+    <div class="logo">
+      <img src="../static/img/icon6.jpg" style="width: 48px;height: 48px;vertical-align: middle">
+      <span style="line-height: 30px; margin-left: 1px;">河南大学智慧篮球竞赛</span>
+    </div>
+    <div class="H_middle">
+      <div class="H_left">
+        <a href="index.html" class="Menu_item">网站首页</a>
+        <a href="process.html" class="Menu_item">比赛流程</a>
 
-  <el-steps :space="100" :active="active" finish-status="success">
-    <el-step title="步骤 1"></el-step>
-    <el-step title="步骤 2"></el-step>
-    <el-step title="步骤 3"></el-step>
-  </el-steps>
+        <a v-if="isLoggedIn" href="apply/index.html" class="Menu_item">比赛报名</a>
+        <a v-else href="apply/login.html" class="Menu_item">比赛报名</a>
 
-  <el-button style="margin-top: 12px;" @click="next">下一步</el-button>
+        <a href="contact.html" class="Menu_item">联系我们</a>
+        <a href="download.html" class="Menu_item">资料下载</a>
+      </div>
+      <div class="H_right">
+        <img src="../static/img/user_icon1.png" style="width: 35px;height: 35px;vertical-align: middle;margin-top:-8px">
+        <a v-if="isLoggedIn" href="apply/index.html">个人中心</a>
+        <a v-else href="apply/login.html">登录/注册</a>
+      </div>
+    </div>
+  </div>
+
+  <!--头部-->
+  <div class="Top">
+    <img src="../static/img/basketbanner.jpg" >
+    <div class="Top_word">河南大学智慧篮球竞赛</div>
+    <div class="Top_word2">时间：2023年11月13日—12月29日</div>
+    <div class="Top_word3">地点：河南大学(金明校区)</div>
+  </div>
+
+  <button class="download-button" @click="downloadFile">下载文件</button><BR><BR><BR><BR><BR><BR>
+
+  <div class="foot">
+    <div class="f_con">
+      <div class="link">
+        <h2>友情链接</h2>
+        <p><a href="https://www.henu.edu.cn/" style="text-decoration: none; color: inherit;">河南大学</a></p>
+        <p>主办单位：<a href="https://software.henu.edu.cn/" style="text-decoration: none; color: inherit;">河南大学软件学院</a></p>
+        <p>承办单位：河南大学智慧网络研究院&nbsp;<a href="https://www.hnzzw.com/" style="text-decoration: none; color: inherit;">河南众知物科技有限公司</a></p>
+      </div>
+      <div class="aboutus">
+        <h2>联系方式</h2>
+        <p>报名：16666666666</p>
+        <p>邮箱：111111111@qq.com</p>
+        <p>地址：河南省开封市龙亭区东京大道河南大学</p>
+      </div>
+      <div class="pic_font">
+        <img src="../static/img/dimentioncode.png" style="width: 200px;height: 220px;margin-left: 120px;margin-top: 10px">
+        <p>请扫码加群</p>
+      </div>
+    </div>
+
+  </div>
 
 </div>
 
@@ -30,6 +77,7 @@
     data() {
       return {
         active: 0,
+        isLoggedIn: false,//判断是否登录参数
       };
     },
     methods: {
@@ -43,9 +91,6 @@
         link.click();
         document.body.removeChild(link); // 之后删除该链接
       },
-      next() {
-        if (this.active++ > 3) this.active = 0;
-      }
 
     }
   });
