--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,13 +22,17 @@
             <div class="H_left">
                 <a href="index.html" class="Menu_item">网站首页</a>
                 <a href="process.html" class="Menu_item">比赛流程</a>
-                <a href="/apply" class="Menu_item">比赛报名</a>
+
+                <a v-if="isLoggedIn" href="apply/index.html" class="Menu_item">比赛报名</a>
+                <a v-else href="apply/login.html" class="Menu_item">比赛报名</a>
                 <a href="contact.html" class="Menu_item">联系我们</a>
+
                 <a href="download.html" class="Menu_item">资料下载</a>
             </div>
             <div class="H_right">
                 <img src="../static/img/user_icon1.png" style="width: 35px;height: 35px;vertical-align: middle;margin-top:-8px">
-                <span >登录/注册</span>
+                <a v-if="isLoggedIn" href="apply/index.html">个人中心</a>
+                <a v-else href="apply/login.html">登录/注册</a>
             </div>
         </div>
     </div>
@@ -172,7 +176,8 @@
         </div>
     </div><BR><BR>
     <div class="button-center">
-        <a href="your_registration_link" class="registration_button">比赛报名</a>
+        <a v-if="isLoggedIn" href="apply/index.html" class="registration_button">比赛报名</a>
+        <a v-else href="apply/login.html" class="registration_button">比赛报名</a>
     </div><BR><BR><BR><BR>
 
     <div class="foot">
@@ -230,6 +235,7 @@
                 activeIndex: '1',
                 arrow: 'always',
                 active: 0,
+                isLoggedIn: false,//判断是否登录参数
             };
         },
         computed: {
@@ -246,9 +252,9 @@
                     return 1; // Step 1
                 } else if (stripTime(currentLocalTime) <= stripTime(step2StartTime)) {
                     return 1; // Step 2
-                } else if (stripTime(currentLocalTime) <= stripTime(step3StartTime)){
+                } else if (stripTime(currentLocalTime) <= stripTime(step3StartTime)) {
                     return 2; // Step 3
-                }else if (stripTime(currentLocalTime) <= stripTime(step4StartTime)){
+                } else if (stripTime(currentLocalTime) <= stripTime(step4StartTime)) {
                     return 3;
                 }
             },
@@ -257,9 +263,6 @@
             handleSelect(key, keyPath) {
                 console.log(key, keyPath);
             },
-            next() {
-                if (this.active++ > 2) this.active = 0;
-            }
         }
     }
     var Ctor = Vue.extend(Main)
